<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="21sp"
    android:paddingBottom="21sp"
    android:paddingLeft="22sp"
    android:paddingRight="22sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/confirmDeleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmDeleteText"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginBottom="31sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="#F5F5F5"
            android:textSize="18sp"
            android:textColor="#000000"
            app:cornerRadius="5dp"
            android:layout_marginEnd="10sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="#F5F5F5"
            android:textSize="18sp"
            android:textColor="#000000"
            app:cornerRadius="5dp"
            android:layout_marginStart="10sp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>